--- a/HelpDesk.Web/Views/Home/Error.cshtml
+++ b/HelpDesk.Web/Views/Home/Error.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model HelpDesk.Models.ViewModels.ErrorViewModel
+@{
     ViewBag.Title = "Hata | HelpDesk";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var message = TempData["Model"] as HelpDesk.Models.ViewModels.ErrorViewModel;
