Kullanıcı listesi sayfası tamamlandı. #1 #2 #4

--- a/HelpDesk.Web/Views/Shared/_DrawerPartial.cshtml
+++ b/HelpDesk.Web/Views/Shared/_DrawerPartial.cshtml
@@ -4,7 +4,7 @@
     <a href="index.html" class="navbar-brand">
         <i class="fa fa-forumbee brand-icon"></i>
         <div class="brand-title">
-            <span class="brand-text">TekSer</span>
+            <span class="brand-text">HelpDesk</span>
         </div>
     </a>
 </div>
