--- a/HelpDesk.Web/Views/Account/UserProfile.cshtml
+++ b/HelpDesk.Web/Views/Account/UserProfile.cshtml
@@ -152,8 +152,7 @@
                                     <div class="form-group row">
                                         <div class="col-sm-9 control-label">
                                             <label asp-for="UserProfileViewModel.PostedFile" class="control-label"></label>
-                                            <input asp-for="UserProfileViewModel.PostedFile" class="form-control col-sm-9" type = "file" multiple = false />
-                                              
+                                            <input asp-for="UserProfileViewModel.PostedFile" class="form-control col-sm-9" type = "file"/>
                                         </div>
                                     </div>
                                     <div class="row narrow-gutter">
