--- a/HelpDesk.Web/Views/Failure/Add.cshtml
+++ b/HelpDesk.Web/Views/Failure/Add.cshtml
@@ -28,7 +28,7 @@
             <h3>@TempData["Message"]</h3>
             <form asp-action="Add" class="fieldset" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input asp-for="ClientId" type="hidden" />.
+                <input asp-for="ClientId" type="hidden" />
                 <div class="form-group row">
                     <div class="col-sm-9 control-label">
                         <label asp-for="FailureName" class="control-label"></label>
