--- a/HelpDesk.Web/Views/Operator/FailureList.cshtml
+++ b/HelpDesk.Web/Views/Operator/FailureList.cshtml
@@ -1,7 +1,82 @@
-﻿
+﻿@model List<HelpDesk.Models.ViewModels.FailureViewModel>
+
 @{
-    ViewData["Title"] = "FailureList";
+    ViewBag.Title = "Arıza Listesi";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>FailureList</h2>
+@section top{
+    <link href="~/assets/plugins/bootstrap-select/bootstrap-select.min.css" rel="stylesheet">
+    <link href="~/assets/plugins/datatables/media/css/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="~/assets/plugins/datatables/extensions/Responsive/css/dataTables.responsive.css" rel="stylesheet">
+    <link href="~/assets/css/demo/jasmine.css" rel="stylesheet">
+}
+
+<div class="pageheader hidden-xs">
+    <h3><i class="fa fa-briefcase"></i>Arıza Listesi</h3>
+</div>
+<!--Page content-->
+<!--===================================================-->
+<div id="page-content">
+    <div class="row">
+        <div class="col-md-12">
+
+            <!-- Basic Data Tables -->
+            <!--===================================================-->
+            <div class="panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Arıza Listesi</h3>
+                </div>
+                <div class="panel-body">
+                    <table id="demo-dt-basic" class="table table-striped table-bordered">
+                        <thead>
+                            <tr>
+                                <th class="text-center">#</th>
+                                <th>Oluşturulma Tarihi</th>
+                                <th>Adı</th>
+                                <th>Soyadı</th>
+                                <th>Durumu</th>
+                                <th>Atanan Teknisyen</th>
+                                <th class="text-center" style="width: 10%;">Ayrıntılar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @for (int i = 0; i < Model.Count; i++)
+                            {
+                                var data = Model[i];
+                                <tr>
+                                    <td class="text-center">@(i + 1)</td>
+                                    <td>@data.CreatedTime</td>
+                                    <td>@data.ClientName</td>
+                                    <td>@data.ClientSurname</td>
+                                    <td>@HelpDesk.BLL.Helpers.EnumHelpers.GetDescription(data.OperationStatus)</td>
+                                    <td class="text-center">@(data.Technician)</td>
+                                    <td class="text-center">
+                                        <a href="@Url.Action("Detail", "Operator", new {id = data.FailureId})" class="btn btn-success">
+                                            Ayrıntılar
+                                        </a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--===================================================-->
+    <!-- End Striped Table -->
+</div>
+
+@section bottom
+    {
+    <script src="~/assets/js/jquery-2.1.1.min.js"></script>
+    <script src="~/assets/js/scripts.js"></script>
+    <script src="~/assets/plugins/nanoscrollerjs/jquery.nanoscroller.min.js"></script>
+    <script src="~/assets/plugins/bootstrap-select/bootstrap-select.min.js"></script>
+    <script src="~/assets/plugins/datatables/media/js/jquery.dataTables.js"></script>
+    <script src="~/assets/plugins/datatables/media/js/dataTables.bootstrap.js"></script>
+    <script src="~/assets/plugins/datatables/extensions/Responsive/js/dataTables.responsive.min.js"></script>
+    <script src="~/assets/js/demo/tables-datatables.js"></script>
+}
 
