--- a/HelpDesk.Web/Views/Operator/Detail.cshtml
+++ b/HelpDesk.Web/Views/Operator/Detail.cshtml
@@ -102,9 +102,8 @@
                                             <form asp-action="Decline">
                                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                 <input asp-for="FailureId" type="hidden" />
-                                                <label asp-for="Report" class="form-control"></label>
-                                                <input asp-for="Report" class="btn btn-danger" />
-                                                <span asp-validation-for="Report" class="text-danger"></span>
+                                                <input asp-for="Report" class="form-control"></input>
+                                                <button class="btn btn-danger" type="submit">Reddet</button>
                                             </form>
                                         </td>
                                     </tr>
